--- a/templates/market.html
+++ b/templates/market.html
@@ -62,8 +62,8 @@
           <td>{{item.barcode}}</td>
           <td>{{item.price}}$</td>
           <td>
-            <button type="button" class="btn btn-outline-info">Info</button>
-            <button type="button" class="btn btn-outline-success">Success</button>
+            <button type="button" class="btn btn-info">More Info</button>
+            <button type="button" class="btn btn-success">Purchase this Item</button>
           </td>
         </tr>
         {% endfor %}
