--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('add_item') }}">Add item</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('add_item') }}">Become A Seller</a>
+                    </li>
                 </ul>
                 <div class="d-flex flex-row-reverse">
                     <ul class="navbar-nav">
