--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -7,6 +7,7 @@ Register
 
 <div class="container text-center">
     <form method="POST" class="form-register" style="color:white">
+        {{ form.hidden_tag() }}
         <img class="mb-4 img-thumbnail" src="https://miro.medium.com/max/438/1*0G5zu7CnXdMT9pGbYUTQLQ.png" width="200px" alt="">
         <h1 class="h3 mb-3 font-weight-normal">
             Please Create your Account
