--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -57,6 +57,21 @@
     </nav>
     <!-- Future Content here -->
     <div class="container my-3">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <div class="my-3">
+            {% for category, message in messages %}
+            <div class="alert alert-{{category}} d-flex align-items-center alert-dismissible fade show" role="alert">
+                <div>
+                    {{ message }}
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+
+        {% endwith %}
         {% block body %}
 
         {% endblock body%}
