--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -43,14 +43,34 @@
                     </li>
                 </ul>
                 <div class="d-flex flex-row-reverse">
+                    {% if current_user.is_authenticated %}
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Login</a>
+                            <a class="nav-link" href="#" style="color: lawngreen; font-weight:bold">
+                                <i class="fas fa-coins"></i>
+                                {{ current_user.prettier_budget }}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Wellcome, {{ current_user.username }}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Logout</a>
+                        </li>
+                    </ul>
+
+                    {% else %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                         </li>
                     </ul>
+                    {% endif %}
+
+
                 </div>
             </div>
         </div>
