--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -55,7 +55,7 @@
                             <a class="nav-link">Wellcome, {{ current_user.username }}</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                         </li>
                     </ul>
 
