--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="{{ url_for('add_item') }}">Add item</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('add_item') }}">Become A Seller</a>
+                        <a class="nav-link" href="{{ url_for('become_a_seller') }}">Become A Seller</a>
                     </li>
                 </ul>
                 <div class="d-flex flex-row-reverse">
@@ -76,7 +76,7 @@
         </div>
     </nav>
     <!-- Future Content here -->
-    <div class="container my-3">
+    <div class="container my-1">
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
         <div class="my-3">
